my-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-07-03T16:09:28Z"
  labels:
    app: wordpress
  name: my-mysql-service
  namespace: default
  resourceVersion: "13099"
  selfLink: /api/v1/namespaces/default/services/my-mysql-service
  uid: 92b258e1-bd47-11ea-aff8-42010a8001fa
spec:
  clusterIP: 10.0.13.104
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: wordpress
    tier: mysql
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
