ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tls-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - www.ibrahumyildirim.com
    - secretName: ingress-secret
  backend:
    serviceName: wordpress-nodeport
    servicePort: 80
  rules:
  - host: www.ibrahimyildirim.com
  - http:
      paths:
      - path: /*
        backend:
          serviceName: wordpress-nodeport
          servicePort: 80
